# arnon-backend

./: .env  Cargo.toml
migrations/2021-06-30-181843_create_products/: up.sql
src/: dummy.rs  main.rs  models.rs  schema.rs
src/model/: product.rs
